# midimap

./: .gitignore  Cargo.toml  Makefile  README.md  example.toml
.github/workflows/: release.yaml
src/: action.rs  command.rs  config.rs  keys.rs  main.rs
