[package]
name = "midimap"
version = "2026.4.25"
edition = "2024"
description = "Map MIDI events (notes, CC) to keyboard shortcuts on macOS and Linux."
license = "MIT"
repository = "https://github.com/a-skua/midimap"
homepage = "https://github.com/a-skua/midimap"
readme = "README.md"
keywords = ["midi", "cli", "keymap", "keyboard", "shortcut"]
categories = ["command-line-utilities"]
exclude = [
    "midimap.toml",
    "target",
    ".github",
]

[[bin]]
name = "midimap"
path = "src/main.rs"

[dependencies]
midir = "0.9"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
